# rustyvault

./: .env  .gitignore  Cargo.toml  README.md  Readme.md
src/: main.rs
src/crypto/: helpers.rs  init.rs
src/generators/: diceware.rs  mod.rs
src/operations/: adders.rs  getters.rs  mod.rs
src/structures/: errors.rs  mod.rs
