[package]
name = "rustyvault"
version = "0.1.0"
authors = ["andrea"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.28"
rpassword = "5.0"
base64 = "0.13.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
clap = "2.33.3"
copypasta-ext = "0.3.2"
home = "0.5.3"
rand = "0.8.0"